fix #2849 (expand collapse button apparence)
git-svn-id: https://amap-dev.cirad.fr/svn/p2pnote/trunk@2245 2504b9b7-a859-4e63-a36b-a611b0752273

--- a/_attachments/style/database.css
+++ b/_attachments/style/database.css
@@ -683,9 +683,11 @@ ul.treenode {
     border-radius: 3px;
 }
 
-.expand-all-cmd, .collapse-all-cmd {
-    width: 30px;
-}
+.expand-all-cmd, .collapse-all-cmd { 
+     width: 30px; 
+     padding-left: 0;
+     padding-right: 0;
+} 
 
 .tree-search-input {
     width: 140px;
